--- a/css/style.css
+++ b/css/style.css
@@ -54,4 +54,31 @@ section.game-banner {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  color: white;
+}
+
+section.game-banner img.game-logo {
+  width: 23%;
+  padding-top: 14em;
+}
+
+/* lg */
+@media screen and (min-width: 992px) {
+  section.game-banner p.game-desc {
+    width: 38%;
+  }
+}
+/* md */
+@media screen and (max-width: 768px) {
+  section.game-banner img.game-logo {
+    width: 58%;
+  }
+}
+
+
+/* xs */
+@media screen and (max-width: 575px) {
+  section.game-banner p.game-desc {
+    width: 90%;
+  }
 }
