--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,6 @@ main {
 }
 /* game banner */
 section.game-banner {
-  height: 70vh;
   background-image: url(../img/jumbo-bg.png);
   background-size: cover;
   background-position: center;
@@ -62,6 +61,10 @@ section.game-banner img.game-logo {
   padding-top: 14em;
 }
 
+section.game-banner button.btn-danger {
+  background-color: rgb(205, 61, 15);
+  border: 0;
+}
 /* lg */
 @media screen and (min-width: 992px) {
   section.game-banner p.game-desc {
