--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,31 @@ section.explore-ps5 p.attract-buyers {
 
 /* game banner it takes two */
 section.game-banner.it-takes-two {
-  height: 70vh;
   background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+}
+section.game-banner.it-takes-two h2 {
+  font-weight: 400;
+  font-size: 2.7em;
 }
 
 section.game-banner.it-takes-two img.it-takes-two {
-  width: 44%;
-  margin-left: 4.3em;
+  width: 58%;
+}
+
+@media screen and (max-width: 768px) {
+  section.game-banner.it-takes-two img.it-takes-two {
+    width: 58%;
+    padding-bottom: 3rem!important;
+  }
+  section.game-banner.it-takes-two h2 {
+    font-size: 2.5em;
+  }
+}
+@media screen and (min-width: 992px) {
+  section.game-banner.it-takes-two h2 {
+    padding-right: 12em;
+  }
+  section.game-banner.it-takes-two img.it-takes-two {
+    width: 25%;
+  }
 }
