--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,12 @@ body {
 .rounded-4 {
   border-radius: 1.5rem;
 }
+.fs-1_3 {
+  font-size: 1.3rem;
+}
+.fs-2_3 {
+  font-size: 2.3rem;
+}
 
 /* header */
 header {
@@ -168,4 +174,9 @@ main section.cards-12 h3 {
   main section.cards-12 h3 {
     font-size: 0.8rem;
   }
+}
+
+/* explore ps4 */
+section.explore-ps4 p {
+  color: gray;
 }
