--- a/css/style.css
+++ b/css/style.css
@@ -71,47 +71,80 @@ section.game-banner {
 }
 
 section.game-banner img.game-logo.returnal {
-  width: 23%;
+  width: 59%;
   padding-top: 14em;
+}
+
+section.game-banner h2 {
+  font-size: 2.84rem;
+}
+section.game-banner p.game-desc {
+  font-size: 1.1rem;
 }
 
 section.game-banner button.btn-danger {
   background-color: rgb(205, 61, 15);
   border: 0;
 }
+
+/* sm */
+@media screen and (min-width: 576px) {
+  section.game-banner h2 {
+    font-size: 2.49rem;
+  }
+  section.game-banner p.game-desc {
+    font-size: 1rem;
+  }
+}
+/* md */
+@media screen and (min-width: 768px) {
+  section.game-banner img.game-logo.returnal {
+    width: 58%;
+  }
+  section.game-banner h2 {
+    font-size: 2.5rem;
+  }
+}
 /* lg */
 @media screen and (min-width: 992px) {
+  section.game-banner img.game-logo.returnal {
+    width: 20%;
+  }
+  section.game-banner h2 {
+    font-size: 1.9rem;
+  }
   section.game-banner p.game-desc {
     width: 38%;
   }
 }
-/* md */
-@media screen and (max-width: 768px) {
-  section.game-banner img.game-logo {
-    width: 58%;
-  }
-}
 
-
-/* xs */
-@media screen and (max-width: 575px) {
-  section.game-banner p.game-desc {
-    width: 90%;
-  }
-}
 
 
 /* explore ps5 */
 section.explore-ps5 p.attract-buyers {
   color: gray;
+  font-size: 1.4rem;
 }
 
 section.explore-ps5 h6.smaller-text {
   font-size: 0.8em;
 }
+@media screen and (min-width: 576px) {
+  section.explore-ps5 p.attract-buyers {
+    font-size: 1.38rem;
+  }
+}
 @media screen and (min-width: 768px) {
   section.explore-ps5 div.gadget-ps5 {
     justify-content: space-around;
+  }
+  section.explore-ps5 p.attract-buyers {
+    font-size: 1.41rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  section.explore-ps5 p.attract-buyers {
+    font-size: 1.22rem;
   }
 }
 
@@ -152,6 +185,14 @@ main section.cards-12 {
   color: white;
 }
 
+main section.cards-12 h2 {
+  font-size: 2rem;
+}
+
+main section.cards-12 p {
+  font-size: 1.6rem;
+}
+
 main section.cards-12 span.trademark::after {
   content: "\f25c";
   display: inline-block;
@@ -164,16 +205,25 @@ main section.cards-12 h3 {
 }
 
 @media screen and (min-width: 576px) {
+  main section.cards-12 p {
+    font-size: 1.47rem;
+  }
   main section.cards-12 h3 {
     font-size: 1rem;
   }
 }
 @media screen and (min-width: 768px) {
+  main section.cards-12 p {
+    font-size: 1.55rem;
+  }
   main section.cards-12 h3 {
     font-size: 1.05rem;
   }
 }
 @media screen and (min-width: 992px) {
+  main section.cards-12 p {
+    font-size: 1.3rem;
+  }
   main section.cards-12 h3 {
     font-size: 0.8rem;
   }
@@ -182,6 +232,12 @@ main section.cards-12 h3 {
 /* explore ps4 */
 section.explore-ps4 p {
   color: gray;
+}
+
+@media screen and (min-width: 992px) {
+  section.explore-ps4 p {
+    font-size: 1.1rem;
+  }
 }
 
 /* promo banner ps plus */
