--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,28 @@ header section.header-navbar div  button.acces-btn {
   margin-left: 0.5rem;
   background-color: black;
 }
+
+.navbar-light .navbar-nav              .nav-link:focus, 
+.navbar-light .navbar-nav              .nav-link:hover,
+.navbar-light .navbar-nav              .nav-link:active {
+  color: var(--light-blue);
+}
+
+.dropdown-item:focus,                  .dropdown-item:hover,
+.dropdown-item:active {
+  box-shadow: 1px 1px 10px black;
+  background-color: white;
+}
+
+@media screen and (max-width: 991px) {
+  a.lens-container {
+    border: 1px solid black;
+    margin: 1rem 0;
+  }
+  header section.header-navbar div  button.acces-btn {
+    padding: 0.5rem 5rem;
+  }
+}
 /* main */
 main {
   padding-top: 116px;
